Criando threads virtuais (fibers, green threads) manualmente